[gd_scene load_steps=2 format=3 uid="uid://bb33phflegolh"]

[ext_resource type="Script" uid="uid://jsam72mfm3j2" path="res://levels/info_panel.gd" id="1_n4h62"]

[node name="InfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 19.0
offset_top = 17.0
offset_right = 199.0
offset_bottom = 150.0
script = ExtResource("1_n4h62")

[node name="Parameters" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 77.0
offset_bottom = 104.0
columns = 2

[node name="ThrottleLabel" type="Label" parent="Parameters"]
layout_mode = 2
text = "Throttle"

[node name="Throttle" type="Label" parent="Parameters"]
layout_mode = 2
text = "0"

[node name="SpeedLabel" type="Label" parent="Parameters"]
layout_mode = 2
text = "Speed"

[node name="Speed" type="Label" parent="Parameters"]
layout_mode = 2
text = "0"

[node name="VerticalSpeedLabel" type="Label" parent="Parameters"]
layout_mode = 2
text = "V Speed"

[node name="VerticalSpeed" type="Label" parent="Parameters"]
layout_mode = 2
text = "0"

[node name="AltitudeLabel" type="Label" parent="Parameters"]
layout_mode = 2
text = "Altitude"

[node name="Altitude" type="Label" parent="Parameters"]
layout_mode = 2
text = "0"

[node name="AngleOfAttackLabel" type="Label" parent="Parameters"]
layout_mode = 2
text = "AoA"

[node name="AngleOfAttack" type="Label" parent="Parameters"]
layout_mode = 2
text = "0"
